# CacheSimAS

./: .gitignore  CMakeLists.txt  Cache.cpp  Cache.h  CacheSimulator.cpp  CacheSimulator.h  Makefile  README.md  UI.cpp  hex2bin.cpp  imgui.ini  input.txt  main.cpp  utils.cpp
imgui/: imgui_demo.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp
include/: Cache.h  CacheSimulator.h  UI.h  utils.h
